1998-09-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (overlap_p, check_for_overlaps): New functions.
	(tkobjc_pixmap_create_from_widget): Save override_redirect flag,
	check for visible, depth > 0 windows with overlapping areas,
	then for each set override_redirect, and unmap.
	Then flush, take a snapshot, and for each remap and restore
	its override_redirect.

1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* win32dib.[ch] (dib_snapshot): Add windowDCFlag.  When
	set, use whole window DC, not just contents.

	* internal.m (tkobjc_pixmap_save): palbuf needs same scope as
	row_pointers.
	(keep_inside_screen): Change usage from widget to tkwin and window
	arguments (latter serves to distinguish parent from non-parent
	snapshots).  Compute relocation to ensure enough is visible for
	parent case.
	(win32_pixmap_create_from_window): Change usage to take Window,
	not a HWND and add parentFlag argument.  Take Window = 0 to mean a
	request for root window.  Conditional to get HWND for these cases.
	Pass parentFlag to dib_snapshot.
	(keep_inside_screen): Handle parent case for Win32.
	(tkobjc_pixmap_create_from_widget): Pass parent flag to
	win32_pixmap_create_from_window.

	* internal.[hm] (tkobjc_pixmap_create_from_widget): New argument
	parentFlag.  When set, request the window's parent window, which
	is decorated by the window manager.

	* Pixmap.m ([Pixmap +createBegin:]): Initialize parentFlag to NO.
	([Pixmap -createEnd]): Pass parentFlag to
	tkobjc_pixmap_create_from_widget.

	* Pixmap.[hm] ([Pixmap -setParentFlag:]): New method.

1998-09-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ZoomRaster.m ([ZoomRaster -setWidth:Height:]): Use
	logical{Width,Height} to set aspect ratio.

	* internal.m (tkobjc_pixmap_create_from_widget): Deiconify,
	process events, move, restack and process events again to 
	handle iconification, partial-offscreen, and overlap cases.

1998-09-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
